--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae quos fugit veritatis, animi saepe laudantium, asperiores eaque quaerat consequuntur quo molestias? Quis vel quae ad voluptatibus, voluptatum quod perferendis quaerat!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo voluptatibus repellat vitae beatae quia? Minima et assumenda similique quibusdam neque! Cumque dignissimos aliquam officia est sed debitis velit quidem aut?</p>
         </article>
     </main>
     
