--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-pb.png" alt="curso em video">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae quos fugit veritatis, animi saepe laudantium, asperiores eaque quaerat consequuntur quo molestias? Quis vel quae ad voluptatibus, voluptatum quod perferendis quaerat!</p>
+            <img class= "lado" src="imagens/curso-html-css.png" alt="">
+            <p>HTML abreviação para a expressão inglesa HyperText Markup Language, que significa: "Linguagem de Marcação de Hipertexto" é uma linguagem de marcação utilizada na construção de páginas na Web. Documentos HTML podem ser interpretados por navegadores. A tecnologia é fruto da junção entre os padrões HyTime e SGML.</p>
+            <p><a href="https://pt.wikipedia.org/wiki/HTML">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo voluptatibus repellat vitae beatae quia? Minima et assumenda similique quibusdam neque! Cumque dignissimos aliquam officia est sed debitis velit quidem aut?</p>
+            <img class="lado" src="imagens/curso-javascript.png" alt="">
+            <p>JavaScript é uma linguagem de programação interpretada estruturada, de script em alto nível com tipagem dinâmica fraca e multiparadigma. Juntamente com HTML e CSS, o JavaScript é uma das três principais tecnologias da World Wide Web</p>
+            <P><a href="https://pt.wikipedia.org/wiki/JavaScript">Acesse o curso de JavaScript</a></P>
         </article>
     </main>
     
